<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChixSetup_final</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="setup_contact_default_name">Max Mustermann</string>
    <string name="setup_contact_default_tel">Tel.: +49 123 456789</string>

    <string name="setupA_uberschrift">Willkommen</string>
    <string name="setupA_herzlichWilkommen">Herzlich willkommen bei "Chix".</string>
    <string name="setupA_WasIstChix">"Chix" hilft dir dabei deine Frauenbekanntschaften zu verwalten und dir wichtige Details zu merken.</string>
    <string name="setupA_SetupInfo">Da du "Chix" zum ersten Mal verwendest, kannst du die App auf den folgenden Seiten für dich optimieren. Du kannst jeden Schritt überspringen - alles ist optional.</string>

    <string name="setupB_uberschrift">Passwort</string>
    <string name="setupB_WhyPW">Wenn du die App mit einem Passwort schützt, kann keiner deine Daten sehen, auch wenn dein Handy entsperrt ist.</string>
    <string name="setupB_Passworteingabe">Passwort:</string>




    <string name="setupC_uberschrift">Kontakte</string>
    <string name="setupC_Info">Klicke auf den gewünschten Kontakt um ihn automatisch zu importieren. Klicke nochmal drauf um ihn doch nicht zu importieren.</string>





    <string name="setupD_uberschrift">Fertig</string>
    <string name="setupD_text">Um die Angaben zu Übernehmen und zum Abschließen des Setups bitte auf den Button "Fertigstellen" drücken. </string>
    <string name="setupD_btnText">Fertigstellen</string>



    <string name="swype2navigate">Wische auf dem Bildschirm um zu navigieren.</string>
    <string name="pwInfo_default">Es wird kein Passwort gesetzt</string>
    <string name="pwInfo_ungleich">Die Passwörter stimmen NICHT überein</string>
    <string name="pwInfo_gleich">Die Passwörter stimmen überein</string>


</resources>
